[project]
name = "crypto-tools"
version = "0.1.0"
description = "A comprehensive cryptography toolkit for Python"
authors = [
    {name = "JoeDavisRAM", email = "ipatova.evgenija@mail.ru"},
]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/JoeDavisRAM/KryptoTools/crypto-tools"
Documentation = "https://github.com/JoeDavisRAM/KryptoTools/wiki"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
