[project]
name = "crypto-tools"
version = "0.1.0"
description = "A comprehensive cryptography toolkit for Python"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/JoeDavisRAM/KryptoTools"
Documentation = "https://github.com/JoeDavisRAM/KryptoTools/wiki"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]